Fix travis matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,9 @@ addons:
   postgresql: "9.4"
 
 env:
-  - REDMINE_VER=3.4-stable
-  - TZ=Europe/Moscow
-  - TZ=UTC
-  - TZ=Europe/Dublin
+  - REDMINE_VER=3.4-stable; TZ=Europe/Moscow
+  - REDMINE_VER=3.4-stable; TZ=UTC
+  - REDMINE_VER=3.4-stable; TZ=Europe/Dublin
 
 branches:
   only:
