add compatibility with Redmine 5.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: ruby
 rvm:
   - 2.4.9
   - 2.6.5
+  - 2.7.2
 
 addons:
   postgresql: "9.4"
@@ -11,11 +12,14 @@ env:
   - REDMINE_VER=4.1-stable; TZ=Europe/Moscow
   - REDMINE_VER=4.1-stable; TZ=UTC
   - REDMINE_VER=4.1-stable; TZ=Europe/Dublin
+  - REDMINE_VER=5.1-stable; TZ=Europe/Moscow
+  - REDMINE_VER=5.1-stable; TZ=UTC
+  - REDMINE_VER=5.1-stable; TZ=Europe/Dublin
 
 matrix:
   exclude:
-  - rvm: 2.6.5
-    env: REDMINE_VER=3.4-stable; TZ=UTC
+  - rvm: 2.7.2
+    env: REDMINE_VER=5.1-stable; TZ=UTC
 
 branches:
   only:
